Remove hard coded copyright year

--- a/src/Microsoft.DotNet.Web.ProjectTemplates/content/StarterWeb-CSharp/Views/Shared/_Layout.cshtml
+++ b/src/Microsoft.DotNet.Web.ProjectTemplates/content/StarterWeb-CSharp/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 1975 - Company.WebApplication1</p>
+            <p>&copy; copyrightYear - Company.WebApplication1</p>
         </footer>
     </div>
 
