--- a/src/UI/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/src/UI/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -13,11 +13,11 @@
         <p>
             <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
         </p>
-        <form asp-page="DownloadPersonalData" method="post" class="form-group">
+        <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
             <button class="btn btn-default" type="submit">Download</button>
         </form>
         <p>
-            <a asp-page="DeletePersonalData" class="btn btn-default">Delete</a>
+            <a id="delete" asp-page="DeletePersonalData" class="btn btn-default">Delete</a>
         </p>
     </div>
 </div>
