[Fixes #11] Add functional tests for the libraries

--- a/src/Microsoft.AspNetCore.Authentication.AzureAD.UI/Areas/AzureAD/Pages/_ViewStart.cshtml
+++ b/src/Microsoft.AspNetCore.Authentication.AzureAD.UI/Areas/AzureAD/Pages/_ViewStart.cshtml
@@ -1,3 +1,13 @@
-﻿@{
-    Layout = "_Layout";
+﻿@using Microsoft.AspNetCore.Hosting
+@using Microsoft.AspNetCore.Mvc.ViewEngines
+
+@inject IHostingEnvironment Environment
+@inject ICompositeViewEngine Engine
+
+@{
+    var result = Engine.FindView(ViewContext, "_Layout", isMainPage: false);
+    if (result.Success)
+    {
+        Layout = "_Layout";
+    }
 }
