[Fixes #1742, #1722, #1706, #1725, #1688] Fixes multiple issues * Update test infrastructure to use the latest bits. * Add tests for different types of users. * Logout must redirect instead of just rendering   the page so that the identity in the request gets   properly updated * Remove IUserFactory and IdentityUserFactory. * Added tests to verify that the default UI endpoints are not accessible   when the default UI is not enabled. * Update the user name at the same time when the email is updated.

--- a/test/WebSites/Identity.DefaultUI.WebSite/Pages/Shared/_LoginPartial.cshtml
+++ b/test/WebSites/Identity.DefaultUI.WebSite/Pages/Shared/_LoginPartial.cshtml
@@ -1,14 +1,11 @@
 @using Microsoft.AspNetCore.Identity
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
-
-@if (SignInManager.IsSignedIn(User))
+@if (User.Identity.IsAuthenticated)
 {
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a id="manage" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <a id="manage" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
             </li>
             <li>
                 <button id="logout" type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
