--- a/src/UI/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/src/UI/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -35,7 +35,7 @@
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Save</button>
+            <button id="update-profile-button" type="submit" class="btn btn-default">Save</button>
         </form>
     </div>
 </div>
