--- a/src/Components/test/testassets/BasicTestApp/FormsTest/NotifyPropertyChangedValidationComponent.razor
+++ b/src/Components/test/testassets/BasicTestApp/FormsTest/NotifyPropertyChangedValidationComponent.razor
@@ -42,7 +42,7 @@
     protected override void OnInitialized()
     {
         editContext = new EditContext(person);
-        editContext.EnableDataAnnotationsValidation();
+        editContext.EnableDataAnnotationsValidation(null!);
 
         // Wire up INotifyPropertyChanged to the EditContext
         person.PropertyChanged += (sender, eventArgs) =>
