--- a/src/Components/Samples/BlazorServerApp/Pages/FetchData.razor
+++ b/src/Components/Samples/BlazorServerApp/Pages/FetchData.razor
@@ -3,6 +3,7 @@
 <PageTitle>Weather forecast</PageTitle>
 
 @using BlazorServerApp.Data
+@inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
 
@@ -39,13 +40,6 @@ else
 
 @code {
     WeatherForecast[]? forecasts;
-
-    public FetchData(WeatherForecastService forecastService)
-    {
-        ForecastService = forecastService;
-    }
-
-    private WeatherForecastService ForecastService { get; }
 
     protected override async Task OnInitializedAsync()
     {
