Input components two-way binding - InputDate E2E test + fix

--- a/src/Components/test/testassets/BasicTestApp/Index.razor
+++ b/src/Components/test/testassets/BasicTestApp/Index.razor
@@ -44,8 +44,8 @@
         <option value="BasicTestApp.FormsTest.ValidationComponentDI">Validation with Dependency Injection</option>
         <option value="BasicTestApp.FormsTest.InputFileComponent">Input file</option>
         <option value="BasicTestApp.FormsTest.InputRangeComponent">Input range</option>
-        <option value="BasicTestApp.FormsTest.TwoWayInputsBindingComponent">Two-way inputs binding</option>
         <option value="BasicTestApp.FormsTest.InputsWithoutEditForm">Inputs without EditForm</option>
+        <option value="BasicTestApp.FormsTest.InputsTwoWayBindingComponent">Inputs two-way binding</option>
         <option value="BasicTestApp.NavigateOnSubmit">Navigate to submit</option>
         <option value="BasicTestApp.GlobalizationBindCases">Globalization Bind Cases</option>
         <option value="BasicTestApp.GracefulTermination">Graceful Termination</option>
