--- a/src/Components/test/testassets/BasicTestApp/FormsTest/InputsTwoWayBindingComponent.razor
+++ b/src/Components/test/testassets/BasicTestApp/FormsTest/InputsTwoWayBindingComponent.razor
@@ -4,7 +4,9 @@
     <DerivedInputTextComponent @bind-Value="@model.TextValue" id="derived-input-text" />
     <DerivedInputDateComponent @bind-Value="@model.DateValue" id="derived-input-date" />
     <DerivedInputNumberComponent @bind-Value="@model.IntValue" id="derived-input-number" />
+    <DerivedInputCheckboxComponent @bind-Value="@model.BoolValue" id="derived-input-checkbox" />
 </EditForm>
+@model.BoolValue
 
 <button id="move-focus-button">Move focus</button>
 
@@ -18,5 +20,6 @@
         public string TextValue { get; set; }
         public DateTime? DateValue { get; set; }
         public int? IntValue { get; set; }
+        public bool BoolValue { get; set; }
     }
 }
