--- a/src/Installers/Windows/HostOptions/Product.wxs
+++ b/src/Installers/Windows/HostOptions/Product.wxs
@@ -51,6 +51,7 @@
             <?define ProductOptionsKey=SOFTWARE\Microsoft\dotnet\host\options\$(var.MajorVersion).$(var.MinorVersion)?>
 
             <Component Id="OPT" Guid="*">
+<!-- COMMENTING OUT FOR NOW TO AVOID ICE WARNING
                 <RegistryKey Root="HKLM" Key="$(var.ProductOptionsKey)">
                     <RegistryValue Name="OPT_NO_ANCM" Type="integer" Value="[OPT_NO_ANCM]" KeyPath="yes" />
                     <RegistryValue Name="OPT_NO_SHAREDFX" Type="integer" Value="[OPT_NO_SHAREDFX]" />
@@ -58,6 +59,7 @@
                     <RegistryValue Name="OPT_NO_X86" Type="integer" Value="[OPT_NO_X86]" />
                     <RegistryValue Name="OPT_NO_SHARED_CONFIG_CHECK" Type="integer" Value="[OPT_NO_SHARED_CONFIG_CHECK]" />
                 </RegistryKey>
+-->
             </Component>
         </ComponentGroup>
     </Fragment>
