Revert "Working ANCM arm64 installers (#39523)"
This reverts commit b4ccd7ba89e02565b68422cecc4154a96c19fb7e.

--- a/src/Installers/Windows/HostOptions/Product.wxs
+++ b/src/Installers/Windows/HostOptions/Product.wxs
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?include ..\AspNetCoreModule-Setup\IIS-Setup\include.wxi ?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
     <Product Id="$(var.ProductCode)" Name="$(var.ProductName)" Language="1033" Version="$(var.Version)" 
              Manufacturer="Microsoft Corporation" UpgradeCode="$(var.UpgradeCode)">
@@ -34,7 +33,7 @@
 
     <Fragment>
         <Directory Id="TARGETDIR" Name="SourceDir">
-            <Directory Id="$(var.ProgramFilesFolder)">
+            <Directory Id="ProgramFilesFolder">
                 <Directory Id="INSTALLFOLDER" Name="dotnet">
                     <Directory Id="MM" Name="$(var.MajorVersion).$(var.MinorVersion)" />
                 </Directory>
