--- a/src/Installers/Windows/AspNetCoreModule-Setup/ANCMIISExpressV2/ancm_iis_expressv2.wxs
+++ b/src/Installers/Windows/AspNetCoreModule-Setup/ANCMIISExpressV2/ancm_iis_expressv2.wxs
@@ -43,7 +43,7 @@
 <?else ?>
     <?define SchemaGuid = "ab582af2-d6c0-43f7-8412-76a19c65d7f2" ?>
     <?define SchemaGuid32 = "e629b31a-3d56-4b5c-959c-586fc1c55599" ?>
-    <?define AspNetCoreV2ProgramFilesTargetPath = "$(varANCMArtifactsARM64)\aspnetcorev2.dll" ?>
+    <?define AspNetCoreV2ProgramFilesTargetPath = "$(var.ANCMArtifactsARM64)\aspnetcorev2.dll" ?>
     <?define AspNetCoreV2HandlerProgramFilesTargetPath = "$(var.ANCMHandlerArtifactsARM64.TargetPath)\aspnetcorev2_outofprocess.dll" ?>
 <?endif ?>
 
@@ -216,7 +216,7 @@
                 <Component Id="AspNetCoreModule.wow" Guid="45ba5011-a619-4d06-8a8d-155b1f9732b3" Win64="no">
                   <File Id="AspNetCoreModuleDll.wow"
                         Name="aspnetcorev2.dll"
-                        Source="$(var.AspNetCoreV2WoW64.TargetPath)"
+                        Source="$(var.ANCMArtifactsWoW64)\aspnetcorev2.dll"
                         DiskId="1"
                         Vital="yes">
                   </File>
@@ -229,7 +229,7 @@
                   <Component Id="AspNetCoreModuleHandler.wow" Guid="0A8EDB50-7D85-4825-8010-D27EFAF061B6" Win64="no">
                     <File Id="AspNetCoreModuleHandlerDll.wow"
                           Name="aspnetcorev2_outofprocess.dll"
-                          Source="$(var.AspNetCoreV2HandlerWoW64.TargetPath)"
+                          Source="$(var.ANCMHandlerArtifactsWoW64)\aspnetcorev2_outofprocess.dll"
                           DiskId="1"
                           Vital="yes">
                     </File>
